--- a/conf/systemd/packetfence-carbon-cache.service.tt
+++ b/conf/systemd/packetfence-carbon-cache.service.tt
@@ -7,7 +7,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 [Service]
 Type=simple
 User=pf
-PIDfile=[% pidFile %]
+PIDFile=[% pidFile %]
 ExecStartPre=/usr/local/pf/bin/pfcmd service carbon-cache generateconfig
 ExecStart=[% cmdLine %]
 ExecReload=/bin/kill -USR1 $MAINPID
