--- a/html/pfappserver/root/node/view.tt
+++ b/html/pfappserver/root/node/view.tt
@@ -135,6 +135,7 @@
               [% form.field('dhcp6_fingerprint').render | none %]
               [% form.field('dhcp6_enterprise').render | none %]
               [% form.field('user_agent').render | none %]
+              <input type="hidden" name="multihost" value="no">
             </div><!--tab-pane-->
             
             <div class="tab-pane fade" id="nodeIpLog">
@@ -205,11 +206,21 @@
         </div><!--modal-body-->
 
         <div class="modal-footer">
+          [% IF node.multihost.size %]<p>[% l('This node is wired to a switchport on which other active devices were detected.') %]<br/>[% l('Therefore, you can apply change to ALL of those devices.') %]</p>[% END %]
           [% IF can_access("NODES_UPDATE") && !form.readonly %]<a href="[% c.uri_for(c.controller('Node').action_for('reevaluate_access'), [ node.mac ]) %]" id="reevaluateNode" class="btn btn-warning pull-left"> [% l('Reevaluate access') %]</a>[% END %]
           [% IF can_access("NODES_UPDATE") && !form.readonly %]<a href="[% c.uri_for(c.controller('Node').action_for('restart_switchport'), [ node.mac ]) %]" id="restartSwitchport" class="btn btn-danger pull-left"> [% l('Restart Switchport') %]</a>[% END %]
           <a href="#" class="btn" data-dismiss="modal">[% l('Close') %]</a>
+          [% IF node.multihost.size %][% IF can_access("NODES_UPDATE") && !form.readonly %]<button type="submit" data-multihost="yes" class="btn btn-primary" data-loading-text="[% l('Saving (All Devices)') %]">[% l('Save (All Devices)') %]</button>[% END %][% END %]
           [% IF can_access("NODES_UPDATE") && !form.readonly %]<button type="submit" class="btn btn-primary" data-loading-text="[% l('Saving') %]">[% l('Save') %]</button>[% END %]
         </div><!--modal-footer-->
 
         </form>
       </div><!--modal-->
+
+<script>
+/* Ability to track submitted button (multihost feature) */
+$("form button[type=submit]").click(function() {
+    $("button[type=submit]", $(this).parents("form")).removeAttr("clicked");
+    $(this).attr("clicked", "true");
+});
+</script>
