Trigger violation for multihost

--- a/html/pfappserver/root/node/violations.tt
+++ b/html/pfappserver/root/node/violations.tt
@@ -41,6 +41,7 @@
       [% IF violation.desc %]<option value="[% violation.id | html %]">[% violation.desc | html %]</option>[% END %]
       [%- END -%]
   </select>
+  [% IF multihost.size %]<a id="addViolation" class="btn btn-warning" href="[% c.uri_for(c.controller('Node').action_for('triggerViolation_multihost'), [mac]) %]">[% l('Trigger (All Devices)') %]</a>[% END %]
   <a id="addViolation" class="btn btn-warning" href="[% c.uri_for(c.controller('Node').action_for('triggerViolation'), [mac]) %]">[% l('Trigger') %]</a>
 </div>
 [%- END %]
