tab on most of the menu

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -84,7 +84,7 @@ table.sources {
             <ul class="nav nav-list">
               [%- IF can_access_any("CONFIGURATION_MAIN_READ","CONNECTION_PROFILES_READ","PORTAL_MODULE_READ","ADMIN_ROLES_READ", "FILTERS_READ") -%]
               <li class="nav-header">[% pf_section_entry( 'define_policy', 'Policies and Access Control') | none %]</li>
-              [%- IF can_access("USERS_ROLES_READ") %]
+              [%- IF can_access("USERS_ROLES_READ","CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'roles', 'Devices') | none %]
               [%- END %]
               [%- IF can_access("USERS_SOURCES_READ") %]
@@ -93,12 +93,11 @@ table.sources {
               [%- IF can_access("SWITCHES_READ") %]
               [% list_entry( 'Config::Switch', 'index', 'Switches') | none %]
               [%- END %]
-              [%- IF can_access("DOMAIN_READ") %]
-              [% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
+              [%- IF can_access("DOMAIN_READ","REALM_READ") %]
+              [% pf_section_entry( 'domains', 'Domains') | none %]
               [%- END %]
-              [%- IF can_access("REALM_READ") %]
-              [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]
-              [%- END %]
+              <!--[% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
+              [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]-->
               [%- IF can_access("PORTAL_PROFILES_READ") %]
               [% list_entry( 'Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
@@ -107,17 +106,19 @@ table.sources {
               [%- END %]
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
-              [% pf_section_entry( 'general', 'General configuration') | none %]
+              [% pf_section_entry( 'main', 'Main Configuration') | none %]
+              <!--[% pf_section_entry( 'general', 'General configuration') | none %]
               [% pf_section_entry( 'alerting', 'Alerting') | none %]
               [%- IF can_access("PFMON_READ") %]
               [% list_entry('Config::Pfmon', 'index', 'Maintenance Tasks') | none %]
               [%- END %]
               [% pf_section_entry( 'advanced', 'Advanced') | none %]
               [% pf_section_entry( 'maintenance', 'Maintenance') | none %]
-              [% pf_section_entry( 'services', 'Services') | none %]
+              [% pf_section_entry( 'services', 'Services') | none %]-->
               [% pf_section_entry( 'inline', 'Inline') | none %]
-              [% pf_section_entry( 'active_active', 'Clustering') | none %]
-              [% pf_section_entry( 'webservices', 'Web Services') | none %]
+              [% pf_section_entry( 'cluster', 'Cluster') | none %]
+              <!--[% pf_section_entry( 'active_active', 'Clustering') | none %]
+              [% pf_section_entry( 'webservices', 'Web Services') | none %]-->
               [%- END %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
@@ -180,7 +181,6 @@ table.sources {
               [% pf_section_entry( 'vlan', 'SNMP') | none %]
               [%- IF can_access("FLOATING_DEVICES_READ") %]
               [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
-              [%- END %]
               [%- END %]
               [%- IF can_access_any("INTERFACES_READ","SWITCHES_READ","FLOATING_DEVICES_READ","FIREWALL_SSO_READ") %]
               [%- END %]
