--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -95,8 +95,6 @@ table.sources {
               [%- IF can_access("DOMAIN_READ","REALM_READ") %]
               [% pf_section_entry( 'domains', 'Domains') | none %]
               [%- END %]
-              <!--[% list_entry( 'Config::Domain', 'index', 'Domains') | none %]
-              [% list_entry( 'Config::Realm', 'index', 'Realms') | none %]-->
               [%- IF can_access("PORTAL_PROFILES_READ") %]
               [% list_entry( 'Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
@@ -106,15 +104,8 @@ table.sources {
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
               [% pf_section_entry( 'main', 'Main Configuration') | none %]
-              <!--[% pf_section_entry( 'general', 'General configuration') | none %]
-              [% pf_section_entry( 'alerting', 'Alerting') | none %]
-              [% pf_section_entry( 'advanced', 'Advanced') | none %]
-              [% pf_section_entry( 'maintenance', 'Maintenance') | none %]
-              [% pf_section_entry( 'services', 'Services') | none %]-->
               [% pf_section_entry( 'inline', 'Inline') | none %]
               [% pf_section_entry( 'cluster', 'Cluster') | none %]
-              <!--[% pf_section_entry( 'active_active', 'Clustering') | none %]
-              [% pf_section_entry( 'webservices', 'Web Services') | none %]-->
               [%- END %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
@@ -143,19 +134,21 @@ table.sources {
               [%- IF can_access("FIREWALL_SSO_READ") %]
               [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
               [%- END %]
-              [%- IF can_access("SCAN_READ") %]
-              [% list_entry('Config::Scan', 'index', 'Scan Engines') | none %]
+              [%- IF can_access("SCAN_READ","WMI_READ","MAIN_CONFIGURATION_READ") %]
+              [% pf_section_entry( 'scans', 'Scans') | none %]
+              <!--[% list_entry('Config::Scan', 'index', 'Scan Engines') | none %]
               [%- END %]
               [%- IF can_access("WMI_READ") %]
               [% list_entry('Config::WMI', 'index', 'WMI Rules') | none %]
               [%- END %]
-              [% pf_section_entry( 'metadefender', 'Metadefender') | none %]
+              [% pf_section_entry( 'metadefender', 'Metadefender') | none %]-->
               [%- IF can_access("PFDETECT_READ") %]
               [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
               [%- IF can_access("FINGERBANK_READ") %]
-              [% list_entry('Config::Fingerbank::Settings', 'index', 'Settings') | none %]
-              <!--[% list_entry('Config::Fingerbank::Combination', 'index', 'Combinations') | none %]
+              [% pf_section_entry( 'profiling', 'Fingerbank') | none %]
+              <!--[% list_entry('Config::Fingerbank::Settings', 'index', 'Settings') | none %]
+              [% list_entry('Config::Fingerbank::Combination', 'index', 'Combinations') | none %]
               [% list_entry('Config::Fingerbank::Device', 'index', 'Devices') | none %]
               [% list_entry('Config::Fingerbank::DHCP_Fingerprint', 'index', 'DHCP Fingerprints') | none %]
               [% list_entry('Config::Fingerbank::DHCP_Vendor', 'index', 'DHCP Vendors') | none %]
