--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -143,28 +143,14 @@ table.sources {
               [%- IF can_access("FIREWALL_SSO_READ") %]
               [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
               [%- END %]
-              [%- IF can_access("SCAN_READ","WMI_READ","MAIN_CONFIGURATION_READ") %]
+              [%- IF can_access("SCAN_READ","WMI_READ","CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'scans', 'Scans') | none %]
-              <!--[% list_entry('Config::Scan', 'index', 'Scan Engines') | none %]
               [%- END %]
-              [%- IF can_access("WMI_READ") %]
-              [% list_entry('Config::WMI', 'index', 'WMI Rules') | none %]
-              [%- END %]
-              [% pf_section_entry( 'metadefender', 'Metadefender') | none %]-->
               [%- IF can_access("PFDETECT_READ") %]
               [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
               [%- IF can_access("FINGERBANK_READ") %]
               [% pf_section_entry( 'profiling', 'Fingerbank') | none %]
-              <!--[% list_entry('Config::Fingerbank::Settings', 'index', 'Settings') | none %]
-              [% list_entry('Config::Fingerbank::Combination', 'index', 'Combinations') | none %]
-              [% list_entry('Config::Fingerbank::Device', 'index', 'Devices') | none %]
-              [% list_entry('Config::Fingerbank::DHCP_Fingerprint', 'index', 'DHCP Fingerprints') | none %]
-              [% list_entry('Config::Fingerbank::DHCP_Vendor', 'index', 'DHCP Vendors') | none %]
-              [% list_entry('Config::Fingerbank::DHCP6_Fingerprint', 'index', 'DHCPv6 Fingerprints') | none %]
-              [% list_entry('Config::Fingerbank::DHCP6_Enterprise', 'index', 'DHCPv6 Enterprises') | none %]
-              [% list_entry('Config::Fingerbank::MAC_Vendor', 'index', 'MAC Vendors') | none %]
-              [% list_entry('Config::Fingerbank::User_Agent', 'index', 'User Agents') | none %]-->
               [%- END %]
               <li class="nav-header">[% pf_section_entry('network', 'Advanced') | none %]</li>
               [% IF can_access("MSE_READ") %]
