--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -104,6 +104,7 @@ table.sources {
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
               [% pf_section_entry( 'main', 'Main Configuration') | none %]
+              [% pf_section_entry( 'database', 'Database') | none %]
               [% pf_section_entry( 'inline', 'Inline') | none %]
               [% pf_section_entry( 'cluster', 'Cluster') | none %]
               [%- END %]
