--- a/addons/monit/monit_checks_configurations/20_packetfence-drbd.tt
+++ b/addons/monit/monit_checks_configurations/20_packetfence-drbd.tt
@@ -2,6 +2,7 @@
 
 check file syslog with path /var/log/messages
     group DRBD
+    ignore content = "monit"
     if match "lost: " then alert
     if match "Process pause detected for" then alert
     if match "Split-Brain detected" then alert
