--- a/html/pfappserver/root/interface/interface_debian.tt
+++ b/html/pfappserver/root/interface/interface_debian.tt
@@ -6,4 +6,11 @@ iface [% interface %] inet static
 [% IF interfaces.$interface.ipaddress %]    address [% interfaces.$interface.ipaddress %][% END %]
 [% IF interfaces.$interface.netmask %]    netmask [% interfaces.$interface.netmask %][% END %]
 [% IF interface == gateway_interface %]    gateway [% gateway %][% END %]
+
+[% IF interfaces.$interface.ipv6_address %]
+iface [% interface %] inet6 static
+    address [% interfaces.$interface.ipv6_address %]
+    netmask [% interfaces.$interface.ipv6_prefix %]
+[% END %]
+
 [% END %][% END %]
