--- a/html/pfappserver/root/interface/interface_rhel.tt
+++ b/html/pfappserver/root/interface/interface_rhel.tt
@@ -5,3 +5,8 @@ BOOTPROTO=static
 NM_CONTROLLED=no
 IPADDR=[% ipaddr %]
 NETMASK=[% netmask %]
+
+[% IF ipv6_address %]
+IPV6INIT=yes
+IPV6ADDR=[% ipv6_address %]/[% ipv6_prefix %]
+[% END %]
