--- a/html/pfappserver/root/config/profile/create.tt
+++ b/html/pfappserver/root/config/profile/create.tt
@@ -16,7 +16,7 @@
   <div class="span10">
     <ul class="breadcrumb">
       <li>
-        <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('index')) %]" >[% l('Portal Profiles and Pages') %]</a>
+        <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('index')) %]" >[% l('Connection Profiles and Pages') %]</a>
         <span class="divider"><i class="icon-chevron-right"></i></span>
       </li>
       <li class="active">[% l('Create') %]</li>
