--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -113,7 +113,7 @@ table.sources {
               [% list_entry('Config::PortalModule', 'index', 'Portal Modules') | none %]
               [%- END %]
               [%- IF can_access("PORTAL_PROFILES_READ") %]
-              [% list_entry('Config::Profile', 'index', 'Portal Profiles') | none %]
+              [% list_entry('Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
               [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
