--- a/html/pfappserver/root/config/profile/edit.tt
+++ b/html/pfappserver/root/config/profile/edit.tt
@@ -62,7 +62,7 @@
 
     <ul class="breadcrumb">
       <li>
-        <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('index')) %]" >[% l('Portal Profiles and Pages') %]</a>
+        <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('index')) %]" >[% l('Connection Profiles and Pages') %]</a>
         <span class="divider"><i class="icon-chevron-right"/></span>
       </li>
       <li>
