--- a/html/pfappserver/root/config/profile/index.tt
+++ b/html/pfappserver/root/config/profile/index.tt
@@ -13,7 +13,7 @@
   </div>
 </div><!-- deleteProfile -->
 
-<h2>[% l('Portal Profiles and Pages')  %]</h2>
+<h2>[% l('Connection Profiles and Pages')  %]</h2>
 [% IF error %]<div class="alert alert-error">
   <button class="close" data-dismiss="alert">&times;</button>
   <strong>[% l('Error!') %]</strong> <span>[% error %]</span>
